--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Video Player</title>
+<title>Vldeyycom</title>
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -30,4 +30,5 @@ Browser Anda tidak mendukung video.
 
 <script src="assets/js/main.js"></script>
 </body>
+
 </html>
