--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <main class="container">
 <video id="video" controls>
-<source src="assets/video/video.mp4" type="video/mp4">
+<source src="video1.mp4" type="video/mp4">
 Browser Anda tidak mendukung video.
 </video>
 
@@ -32,3 +32,4 @@ Browser Anda tidak mendukung video.
 </body>
 
 </html>
+
