--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Vldeyycom</title>
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="header">Video Player</header>
+<header class="header">Vldeyycom1</header>
 
 
 <main class="container">
@@ -28,8 +28,9 @@ Browser Anda tidak mendukung video.
 </main>
 
 
-<script src="assets/js/main.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
+
 
